# mavlink_indoor_sdk_ros

./: .gitmodules  README.md
mavlink_indoor_sdk_sitl/: CMakeLists.txt  aruco.blend1  package.xml
mavlink_indoor_sdk_sitl/config/: config.yml  log.yml  map.txt
mavlink_indoor_sdk_sitl/launch/: sitl_ver.launch
mavlink_indoor_sdk_sitl/models/aruco_map/: aruco_map.sdf  model.config
mavlink_indoor_sdk_sitl/models/aruco_map/meshes/: aruco.dae  untitled2.dae
mavlink_indoor_sdk_sitl/models/iris/: iris.sdf
mavlink_indoor_sdk_sitl/script/: genmap.py
mavlink_indoor_sdk_sitl/src/: udp_vpe_sitl.cpp
